spacing issue with three up

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -410,7 +410,7 @@ nav {
 
   .three-up {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
     margin: 2em 0; 
   }
